tests/machine/x/c/values_builtin.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/values_builtin.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/values_builtin.c:59:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   59 |   map_int_bool_put(&_t1, "a", 1);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/values_builtin.c:38:51: note: expected ‘int’ but argument is of type ‘char *’
   38 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/values_builtin.c:60:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   60 |   map_int_bool_put(&_t1, "b", 2);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/values_builtin.c:38:51: note: expected ‘int’ but argument is of type ‘char *’
   38 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/values_builtin.c:61:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   61 |   map_int_bool_put(&_t1, "c", 3);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/values_builtin.c:38:51: note: expected ‘int’ but argument is of type ‘char *’
   38 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/values_builtin.c:62:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   62 |   int m = _t1;
      |           ^~~
/workspace/mochi/tests/machine/x/c/values_builtin.c:63:18: warning: implicit declaration of function ‘values’ [-Wimplicit-function-declaration]
   63 |   printf("%d\n", values(m));
      |                  ^~~~~~

   1: #include <stdio.h>
